Fix word wrap in code blocks

--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -3,6 +3,10 @@ article.post {
     text-decoration: underline;
   }
 
+  pre > code[class*="language-"] {
+    word-wrap: normal;
+  }
+
   pre {
     font-size: 1.1rem;
 
